# jpg2bot

./: .gitignore  Main.hs  README.md  conf.example  jpg2bot.cabal
