name:                jpg2bot
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable testbot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       random==1.*,
                       lens == 4.*,
                       text >= 1.1.1.3,
                       warp == 3.*,
                       tightrope == 0.1.*,
                       base >=4.7 && <4.8
  -- hs-source-dirs:
  default-language:    Haskell2010
